Fixes export button floating right on mobile screens

--- a/src/main/resources/static/scss/sections/_groupings.scss
+++ b/src/main/resources/static/scss/sections/_groupings.scss
@@ -132,7 +132,7 @@
 }
 
 /* Exports to CSV button */
-@media (min-width: 377px) {
+@include media-breakpoint(min-mobile) {
     #csvButton {
         float: right;
 
